--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
 <div id="app"></div>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
